<resources>
    <string name="app_name">Your English Vocabulary</string>
    <string name="your_english_text">Your English</string>
    <string name="vocabulary_text">Vocabulary</string>
    <string name="save_new_word_text">Save New Word</string>
    <string name="practice_text">Practice!</string>

    <!-- title of activities -->
    <string name="title_activity_save_new_word">SaveNewWordActivity</string>
    <string name="title_activity_practice_your_english">Practice Your English!</string>
    <string name="title_activity_word_vs_words">Word vs Words!</string>
    <string name="title_activity_word_vs_images">Word vs Images!</string>
    <string name="title_activity_sound_vs_images">Sound vs Images!</string>
    <string name="title_activity_image_vs_words">Image vs Words!</string>
    <string name="title_activity_sound_vs_words">Sound vs Words!</string>
    <string name="title_activity_settings">Settings</string>

    <!-- menu items -->
    <string name="action_settings">Settings your practice</string>
    <string name="action_save_new_word">Save New Word</string>
    <string name="action_practice">Practice</string>
    <string name="action_exit">Exit</string>

    <string name="tab_text_1">Word</string>
    <string name="tab_text_2">Examples</string>
    <string name="word_english_text">Word in English</string>
    <string name="word_spanish_text">Word in Spanish</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="kind_word_text">Kind of Word</string>
    <string name="pronoun_text">Pronoun</string>
    <string name="adjective_text">Adjective</string>
    <string name="adverb_text">Adverb</string>
    <string name="regular_verb_text">Regular Verb</string>
    <string name="irregular_verb_text">Irregular Verb</string>
    <string name="preposition_text">Preposition</string>
    <string name="url_image_text">Url from the imagen</string>
    <string name="first_example_text">First Example</string>
    <string name="second_example_text">Second Example</string>
    <string name="third_example_text">Third Example</string>
    <string name="fourth_example_text">Fourth Example</string>
    <string name="fifth_example_text">Fifth Example</string>

    <!-- placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="word_vs_words_text">Word vs Words</string>
    <string name="word_vs_images_text">Word vs Images</string>
    <string name="sound_vs_words_text">Sound vs Words</string>
    <string name="sound_vs_images_text">Sound vs Images</string>
    <string name="image_vs_words_text">Image vs Words</string>
    <string name="word_text"><u>Word</u></string>
    <string name="options_text"><u>Options</u></string>
    <string name="play_to_listening_text"><u>Play to Listening!</u></string>
    <string name="valid_text">Valid</string>
    <string name="next_text">Next</string>
    <string name="option3_text">option 3</string>
    <string name="option4_text">option 4</string>
    <string name="option2_text">option 2</string>
    <string name="option1_text">option 1</string>
    <string name="appwidget_text">Practice Now!</string>
    <string name="add_widget">Add widget</string>
    <string name="one_title_setting">Times to practice per day</string>
    <string name="one_summary_setting">How many times will you practice english per day?</string>
    <string name="two_title_setting">Days to practice</string>
    <string name="two_summary_setting">What days of week will you practice English?</string>
    <string name="three_title_setting">Time</string>
    <string name="three_summary_setting">What time will you start to practice English?</string>
    <string name="default_value_three_setting">9:30</string>

    <string name="words_in_english_less_than_zero">There aren\'t words to make the questions</string>
    <string name="words_in_english_less_than_position">There isn\'t more words</string>
    <string name="words_less_than_4">You must save aless 4 words</string>
    <string name="word_english_empty">Word in English is empty</string>
    <string name="word_spanish_empty">Word in Spanish is empty</string>
    <string name="kind_word_not_selected">Kind of Word is not selected</string>
    <string name="url_image_empty">Url from the image is empty</string>
    <string name="action">Action</string>
    <string name="word_saved_with_success">The word was inserted with success</string>
    <string name="word_updated_with_success">The word was updated with success</string>
    <string name="select_one_option">Please, you must select one option</string>
    <string name="right_answer">Right answer</string>
    <string name="wrong_answer">Wrong answer</string>
    <string name="mediarecorder_failed">MediaRecorder prepare failed!</string>
    <string name="must_save_a_word_first">You must save a word first</string>
    <string name="add_one_example">Add at least one example</string>
    <string name="examples_saved">Examples were added</string>
    <string name="describe_image_save_word">Image Save New Word</string>
    <string name="describe_image_vs_words">Image of Image vs Words</string>
    <string name="play_sound">Play to Listening Sound</string>
    <string name="save_sound">Save Sound</string>


</resources>
