<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.yourenglishvocabulary.ui.SaveNewWordActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_save_new_word"
        android:orderInCategory="100"
        android:title="@string/action_save_new_word"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_practice"
        android:orderInCategory="100"
        android:title="@string/action_practice"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never" />
</menu>
