<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.yourenglishvocabulary.ui.WordVsWordsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/word_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/word_in_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/word_english_text"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="66dp"
                android:text="@string/options_text"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp">

                <Button
                    android:id="@+id/option1_button"
                    style="@style/Widget.Button"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/option1_text"
                    android:paddingBottom="16dp"
                    android:paddingLeft="36dp"
                    android:paddingRight="36dp"
                    android:paddingTop="16dp"
                    android:text="@string/option1_text"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/option2_button"
                    style="@style/Widget.Button"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/option2_text"
                    android:paddingBottom="16dp"
                    android:paddingLeft="36dp"
                    android:paddingRight="36dp"
                    android:paddingTop="16dp"
                    android:text="@string/option2_text"
                    android:textSize="14sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <Button
                    android:id="@+id/option3_button"
                    style="@style/Widget.Button"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/option3_text"
                    android:paddingBottom="16dp"
                    android:paddingLeft="36dp"
                    android:paddingRight="36dp"
                    android:paddingTop="16dp"
                    android:text="@string/option3_text"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/option4_button"
                    style="@style/Widget.Button"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/option4_text"
                    android:paddingBottom="16dp"
                    android:paddingLeft="36dp"
                    android:paddingRight="36dp"
                    android:paddingTop="16dp"
                    android:text="@string/option4_text"
                    android:textSize="14sp" />

            </RelativeLayout>

        </LinearLayout>

        <Button
            android:id="@+id/valid_button"
            style="@style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/valid_text"
            android:paddingBottom="16dp"
            android:paddingLeft="36dp"
            android:paddingRight="36dp"
            android:paddingTop="16dp"
            android:text="@string/valid_text"
            android:textSize="24sp" />

    </RelativeLayout>

</FrameLayout>
