<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.yourenglishvocabulary.ui.SoundVsImagesFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/play_to_listening_text"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/play_sound_imageview"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:src="@android:drawable/ic_media_play"
                android:tint="@color/colorPrimary"
                android:contentDescription="@string/play_sound"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/options_text"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp">

                <ImageView
                    android:id="@+id/option1_imageview"
                    android:layout_width="170dp"
                    android:layout_height="130dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:background="@color/colorPrimary"
                    android:contentDescription="@string/option1_text"
                    android:paddingBottom="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"
                    android:scaleType="fitXY" />

                <ImageView
                    android:id="@+id/option2_imageview"
                    android:layout_width="170dp"
                    android:layout_height="130dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="16dp"
                    android:background="@color/colorPrimary"
                    android:contentDescription="@string/option2_text"
                    android:paddingBottom="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"
                    android:scaleType="fitXY"
                    android:textSize="14sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp">

                <ImageView
                    android:id="@+id/option3_imageview"
                    android:layout_width="170dp"
                    android:layout_height="130dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:background="@color/colorPrimary"
                    android:contentDescription="@string/option3_text"
                    android:paddingBottom="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"
                    android:scaleType="fitXY"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/option4_imageview"
                    android:layout_width="170dp"
                    android:layout_height="130dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="16dp"
                    android:background="@color/colorPrimary"
                    android:contentDescription="@string/option4_text"
                    android:paddingBottom="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"
                    android:scaleType="fitXY"
                    android:textSize="14sp" />

            </RelativeLayout>

        </LinearLayout>

        <Button
            android:id="@+id/valid_button"
            style="@style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/valid_text"
            android:paddingBottom="16dp"
            android:paddingLeft="36dp"
            android:paddingRight="36dp"
            android:paddingTop="16dp"
            android:text="@string/valid_text"
            android:textSize="24sp" />

    </RelativeLayout>

</FrameLayout>
