<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_word_tab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.yourenglishvocabulary.ui.TabWordFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/container_word_english"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/word_english_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/word_english_text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/play_word_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:src="@android:drawable/ic_media_play"
                android:tint="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@id/container_word_english"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/container_word_english"
                app:layout_constraintTop_toTopOf="@id/container_word_english" />

            <ImageView
                android:id="@+id/record_word_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:src="@android:drawable/ic_btn_speak_now"
                android:tint="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@id/container_word_english"
                app:layout_constraintLeft_toRightOf="@id/container_word_english"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/container_word_english" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/container_word_spanish"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container_word_english">

                <EditText
                    android:id="@+id/word_spanish_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/word_spanish_text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/kind_word_textview"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/kind_word_text"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container_word_spanish" />

            <RadioGroup
                android:id="@+id/container_kind_word"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/kind_word_textview">

                <RadioButton
                    android:id="@+id/pronoun_radiobutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pronoun_text" />

                <RadioButton
                    android:id="@+id/adjective_radiobutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/adjective_text" />

                <RadioButton
                    android:id="@+id/adverb_radiobutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/adverb_text" />


                <RadioButton
                    android:id="@+id/regular_verb_radiobutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/regular_verb_text" />

                <RadioButton
                    android:id="@+id/irregular_verb_radiobutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/irregular_verb_text" />

                <RadioButton
                    android:id="@+id/preposition_radiobutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/preposition_text" />
            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/container_url_image"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container_kind_word">

                <EditText
                    android:id="@+id/url_image_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/url_image_text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

        </android.support.constraint.ConstraintLayout>


    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_word_tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        android:elevation="@dimen/fab_elevation"
        app:pressedTranslationZ="@dimen/fab_pressed"
        app:srcCompat="@android:drawable/ic_menu_save" />

</android.support.design.widget.CoordinatorLayout>